--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
 telegrambot.userName=@PeopleSearch_bot
 telegrambot.botToken=1450879563:AAFOVdASbooTEjo3IGce0UHkOq2VkBduU30
-telegrambot.webHookPath=https://efa81987c5c0.ngrok.io
+telegrambot.webHookPath=https://searchpeoplebot.herokuapp.com/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/people_search?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
 spring.datasource.username=root
