add Java Version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ telegrambot.botToken=1450879563:AAFOVdASbooTEjo3IGce0UHkOq2VkBduU30
 telegrambot.webHookPath=https://searchpeoplebot.herokuapp.com/
 
 
-spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_35822fe3eed2601?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
+spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_35822fe3eed2601?reconnect=true
 spring.datasource.username=b26982f8076874
 spring.datasource.password=016a3fe1
 
