--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
 telegrambot.userName=@PeopleSearch_bot
 telegrambot.botToken=1450879563:AAFOVdASbooTEjo3IGce0UHkOq2VkBduU30
-telegrambot.webHookPath=https://searchpeoplebot.herokuapp.com/
+telegrambot.webHookPath=https://ad34e87ff8d5.ngrok.io
 
 
 spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_35822fe3eed2601?reconnect=true
@@ -12,6 +12,8 @@ spring.datasource.password=016a3fe1
 #spring.datasource.url=jdbc:mysql://localhost:3306/people_search?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
 #spring.datasource.username=root
 #spring.datasource.password=7009f2
+
+
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
