--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
 telegrambot.userName=@PeopleSearch_bot
 telegrambot.botToken=1450879563:AAFOVdASbooTEjo3IGce0UHkOq2VkBduU30
-telegrambot.webHookPath=https://ad34e87ff8d5.ngrok.io
+telegrambot.webHookPath=https://searchpeoplebot.herokuapp.com
 
 
 spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_35822fe3eed2601?reconnect=true
