--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=80
 telegrambot.userName=@PeopleSearch_bot
 telegrambot.botToken=1450879563:AAFOVdASbooTEjo3IGce0UHkOq2VkBduU30
+#telegrambot.webHookPath=https://0286d48e412c.ngrok.io
 telegrambot.webHookPath=https://searchpeoplebot.herokuapp.com
-
 
 spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_35822fe3eed2601?reconnect=true
 spring.datasource.username=b26982f8076874
